# upwork_analysis

./: .gitignore  LICENSE  README.md  analyze_data.py  data_analysis.ipynb  pyproject.toml  scrape_data.py
upwork_analysis/: __init__.py  analyze_data.py  data_analysis.ipynb  scrape_data.py
